# Finance-Dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  redoc_server.py  requirements.txt  seed_data.py
api/: index.py
app/: config.py  database.py  main.py
app/dependencies/: auth.py  database.py
app/middleware/: rate_limiter.py
app/models/: financial_record.py  user.py
app/routers/: auth.py  dashboard.py  financial_records.py  users.py
app/schemas/: dashboard.py  financial_record.py  user.py
app/services/: auth_service.py  dashboard_service.py  record_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_dashboard.py  test_financial_records.py  test_users.py
